--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
   <title>jsapi4/angular2</title>
   <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
-  <link rel="stylesheet" href="//js.arcgis.com/4.1/esri/css/main.css">
+  <link rel="stylesheet" href="//js.arcgis.com/4.2/esri/css/main.css">
 
   <link rel="stylesheet" href="app/styles/main.css">
 
-  <script src="//js.arcgis.com/4.1/" data-dojo-config="async: true"></script>
+  <script src="//js.arcgis.com/4.2/" data-dojo-config="async: true"></script>
 
 </head>
 
@@ -16,8 +16,8 @@
     <my-app>Loading...</my-app>
   </div>
   <script type="text/javascript">
-      require(["/dist/vendor.bundle.js", "/dist/main.bundle.js"], function (vendor, main) {});
-    </script>
+    require(["/dist/polyfills.bundle.js", "/dist/vendor.bundle.js", "/dist/main.bundle.js"], function (polyfills, vendor, main) { });
+  </script>
 </body>
 
 </html>
