--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-  <title>jsapi4/angular2</title>
+  <title>joshwerts::angular2-esri-play</title>
   <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
   <link rel="stylesheet" href="//js.arcgis.com/4.2/esri/css/main.css">
 
@@ -16,7 +16,7 @@
     <my-app>Loading...</my-app>
   </div>
   <script type="text/javascript">
-    require(["/dist/polyfills.bundle.js", "/dist/vendor.bundle.js", "/dist/main.bundle.js"], function (polyfills, vendor, main) { });
+    require(["./dist/polyfills.bundle.js", "./dist/vendor.bundle.js", "./dist/main.bundle.js"], function (polyfills, vendor, main) { });
   </script>
 </body>
 
