fixes #1: updated to webpack 2

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
   <link rel="stylesheet" href="//js.arcgis.com/4.2/esri/css/main.css">
 
-  <link rel="stylesheet" href="app/styles/main.css">
+  <link rel="stylesheet" href="styles/main.css">
 
   <script src="//js.arcgis.com/4.2/" data-dojo-config="async: true"></script>
 
@@ -16,7 +16,9 @@
     <my-app>Loading...</my-app>
   </div>
   <script type="text/javascript">
-    require(["./dist/polyfills.bundle.js", "./dist/vendor.bundle.js", "./dist/main.bundle.js"], function (polyfills, vendor, main) { });
+    require(["./dist/polyfills.bundle.js",
+      "./dist/vendor.bundle.js",
+      "./dist/main.bundle.js"], function (polyfills, vendor, main) { });
   </script>
 </body>
 
