updated, but test fixture failing

--- a/index.html
+++ b/index.html
@@ -3,11 +3,9 @@
 <head>
   <title>joshwerts::angular2-esri-play</title>
   <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
-  <link rel="stylesheet" href="//js.arcgis.com/4.2/esri/css/main.css">
-
+  <link rel="stylesheet" href="//js.arcgis.com/4.4/esri/css/main.css">
   <link rel="stylesheet" href="styles/main.css">
-
-  <script src="//js.arcgis.com/4.2/" data-dojo-config="async: true"></script>
+  <script src="//js.arcgis.com/4.4/" data-dojo-config="async: true"></script>
 
 </head>
 
@@ -16,9 +14,11 @@
     <my-app>Loading...</my-app>
   </div>
   <script type="text/javascript">
-    require(["./dist/polyfills.bundle.js",
+    require([
+      "./dist/polyfills.bundle.js",
       "./dist/vendor.bundle.js",
-      "./dist/main.bundle.js"], function (polyfills, vendor, main) { });
+      "./dist/main.bundle.js"],
+      function (polyfills, vendor, main) { });
   </script>
 </body>
 
